[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/Marker/EnemySubgroupPlacemark.gd" type="Script" id=1]
[ext_resource path="res://resources/fonts/NotoSansJP-Regular.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 14
outline_size = 1
outline_color = Color( 0.14902, 0.14902, 0.14902, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.556863, 0.2, 0.2, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.494118, 0.0470588, 0.25098, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 2.0
expand_margin_right = 2.0

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.356863, 0.0980392, 0.211765, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.494118, 0.0470588, 0.25098, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 2.0
expand_margin_right = 2.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.333333, 0.333333, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.494118, 0.0470588, 0.25098, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 2.0
expand_margin_right = 2.0

[node name="EnemySubgroupPlacemark" type="Control"]
mouse_filter = 1
script = ExtResource( 1 )

[node name="SubgroupButton" type="Button" parent="."]
margin_right = 40.0
margin_bottom = 18.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 2 )
text = "GRP - X/Y"

[node name="EnemyPositionPlacemarksControl" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 1

[connection signal="mouse_entered" from="SubgroupButton" to="." method="_on_GroupButton_mouse_entered"]
[connection signal="mouse_exited" from="SubgroupButton" to="." method="_on_GroupButton_mouse_exited"]
[connection signal="pressed" from="SubgroupButton" to="." method="_on_GroupButton_pressed"]
